--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,12 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
+
+# cpp specific files
+*.cache
+*.hex
+*.elf
+*.o
+*.d
+build/
+compile_commands.json
